--- a/index.html
+++ b/index.html
@@ -10,22 +10,6 @@
       <script src="assets/app.js"></script>
    </head>
    <body>
-      <div class="content">
-         <div class="logo">
-            <img src="assets/img/logotyp.png" class="logo">
-         </div>
-         <div class="midfield">
-            <form id="formularz" name="formularz" method="post">
-               <p class="pl">Panel Logowania</p>
-               <label class="label" id="label" for="mail"><b>E-Mail</b></label>
-               <input class="mailbox" id="mailbox" type="text" placeholder="    jan.kowalski@gmail.com" name="mailbox">
-               <p class="small hidden" id="mail-feedback"></p>
-               <label class="label" id="label2" for="haslo"><b>Password</b></label>
-               <input class="passwordbox" id="passwordbox" type="text" placeholder="    *********" name="passwordbox">
-               <p class="small hidden" id="password-feedback"></p>
-               <button class="button" type="submit">ZALOGUJ</button>
-            </form>
-         </div>
-      </div>
+     <div id="app"></div>
    </body>
 </html>
