--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <script src="assets/app.js">
    </head>
    <body>
-     <div id="app"></div>
+      <div id="api"></div>
    </body>
 </html>
