--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <html>
    <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <script src="assets/app.js">
+      <script>
+      
+      fetch('https://reqres.in/api/users', {
+  method: 'POST', // lub np. GET, PUT, DELETE
+  headers: {
+    'Content-Type': 'application/json',
+  },
+})
+.then(response => response.json())
+.then(data => {
+  console.log('Success:', data);
+})
+.catch((error) => {
+  console.error('Error:', error);
+});
+         </script>
    </head>
-   <body>
-      <div id="api"></div>
-   </body>
 </html>
