--- a/index.html
+++ b/index.html
@@ -1,20 +1,13 @@
 <html>
-   <head>
-      <script>
-      
-      fetch('https://reqres.in/api/users', {
-  method: 'POST', // lub np. GET, PUT, DELETE
-  headers: {
-    'Content-Type': 'application/json',
-  },
-})
-.then(response => response.json())
-.then(data => {
-  console.log('Success:', data);
-})
-.catch((error) => {
-  console.error('Error:', error);
-});
-         </script>
-   </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="assets/2.css" rel="stylesheet">
+    <title>2</title>
+</head>
+<body>
+    <div id="app"></div>
+    <script src="assets/2.js">
+    </script>
+</body>
 </html>
